--- a/css/style.css
+++ b/css/style.css
@@ -582,6 +582,7 @@ textarea {
   min-height: 100vh;
   /* stylelint-disable-next-line */
   min-height: calc(100 * var(--vh, 1vh));
+  background-color: #f2f5f6;
 }
 
 .wrapper .header,
@@ -1387,24 +1388,34 @@ textarea {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  gap: 10px;
-  width: 38%;
+  gap: 10px 26%;
+  width: 39%;
   margin-top: 10px;
   margin-left: 8px;
 }
 
 .header__contact-link {
+  height: 65%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 15px;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   color: #f2f5f6;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.header__contact-link:hover {
+  opacity: 0.5;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .header__contact-link .description {
@@ -1414,7 +1425,8 @@ textarea {
 
 .header__button {
   margin-right: 60px;
-  margin-bottom: 4px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .button {
@@ -1498,7 +1510,7 @@ textarea {
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
-  padding: 16px 30px 10px;
+  padding: 14px 30px 10px;
   background-color: #041827;
 }
 
@@ -1561,6 +1573,19 @@ textarea {
   user-select: none;
 }
 
+.logo__image {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.logo__image:hover {
+  opacity: 0.5;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 .logo__title {
   font-size: 25px;
   line-height: 30px;
@@ -1588,14 +1613,21 @@ textarea {
 
 .intro {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   z-index: 1;
   color: #f2f5f6;
   background-color: #041827;
   margin-top: -115px;
-  padding: 424px 476px 282px;
+  padding: 419px 252px 282px 0;
 }
 
 .intro__wrapper {
+  max-width: 1920px;
   z-index: 2;
 }
 
@@ -1604,7 +1636,7 @@ textarea {
   line-height: 94px;
   text-transform: uppercase;
   font-weight: 700;
-  letter-spacing: 7px;
+  letter-spacing: 7.3px;
 }
 
 .intro__description {
@@ -1804,6 +1836,13 @@ textarea {
   min-height: 650px;
   background-color: #006692;
   z-index: 0;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.goods__item:hover {
+  opacity: 0.5;
 }
 
 .goods__link {
@@ -1941,23 +1980,23 @@ textarea {
 }
 
 .question-form input::-webkit-input-placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form input::-moz-placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form input:-ms-input-placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form input::-ms-input-placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form input::placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form input[type=checkbox] {
@@ -1982,29 +2021,32 @@ textarea {
 }
 
 .question-form textarea::-webkit-input-placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form textarea::-moz-placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form textarea:-ms-input-placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form textarea::-ms-input-placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form textarea::placeholder {
-  color: rgba(4, 24, 39, 0.7);
+  color: #ffffff;
 }
 
 .question-form button {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
   margin-top: 29px;
   margin-left: 1px;
   margin-right: 9px;
@@ -2015,7 +2057,7 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 11px;
+  gap: 10px;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -2028,7 +2070,7 @@ textarea {
   position: relative;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  width: 20px;
+  width: 18px;
   height: 15px;
   border: 1px solid #ffffff;
   border-radius: 2px;
@@ -2073,6 +2115,7 @@ textarea {
 }
 
 .footer__social-list {
+  max-width: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2081,6 +2124,16 @@ textarea {
   gap: 26px;
   margin-top: 35px;
   margin-left: 14px;
+}
+
+.footer__social-icon:hover svg {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  opacity: 0.5;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .footer__nav {
@@ -2093,7 +2146,7 @@ textarea {
   flex-direction: column;
   gap: 20px;
   margin-top: 7px;
-  margin-left: 46px;
+  margin-left: 3%;
 }
 
 .footer__contacts {
@@ -2155,6 +2208,13 @@ textarea {
   -webkit-box-flex: 0;
   -ms-flex-positive: 0;
   flex-grow: 0;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.nav__link:hover {
+  color: #f2f5f6;
 }
 
 .pop-up {
@@ -2228,8 +2288,47 @@ textarea {
 }
 
 .pop-up .question-form__personal-data {
+  -webkit-box-ordinal-group: 6;
+  -ms-flex-order: 5;
+  order: 5;
   margin-top: 0;
+  margin-left: 9px;
   color: #ffffff;
+}
+
+.pop-up .question-form__custom-checkbox {
+  width: 14px;
+  height: 14px;
+}
+
+.success {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  background-color: rgba(4, 24, 39, 0.7);
+  text-align: center;
+  z-index: 100;
+}
+
+.success__wrapper {
+  position: relative;
+  background-color: transparent;
+  padding: 0 5%;
+  top: 35%;
+  color: #f2f5f6;
+}
+
+.success__title {
+  font-size: 80px;
+  line-height: 100px;
+}
+
+.success__description {
+  font-size: 40px;
+  line-height: 60px;
 }
 
 /* @mixin hover-focus {
@@ -2281,6 +2380,11 @@ textarea {
   .goods__list {
     gap: 30px;
   }
+
+  .questions__container {
+    -ms-grid-columns: 1fr 580px;
+    grid-template-columns: 1fr 580px;
+  }
 }
 
 @media (max-width: 1023px) {
@@ -2300,6 +2404,7 @@ textarea {
   .header__contacts {
     width: auto;
     gap: 40px;
+    margin-top: 3px;
   }
 
   .header__contact-link .description {
@@ -2308,6 +2413,10 @@ textarea {
 
   .header__button {
     display: none;
+  }
+
+  .button--intro {
+    padding: 16px 25px;
   }
 
   .button--question {
@@ -2327,7 +2436,7 @@ textarea {
   }
 
   .main__questions {
-    padding: 46px 0 122px;
+    padding: 34px 0 134px;
   }
 
   .intro {
@@ -2344,7 +2453,7 @@ textarea {
   .intro__title {
     font-size: 64px;
     line-height: 74px;
-    letter-spacing: 5px;
+    letter-spacing: 4.5px;
   }
 
   .intro__description {
@@ -2359,7 +2468,6 @@ textarea {
   .intro__image {
     -o-object-position: -128px;
     object-position: -128px;
-    height: 644px;
   }
 
   .advantages__list {
@@ -2387,7 +2495,7 @@ textarea {
   .about__container {
     gap: 0 30px;
     padding-left: 46px;
-    padding-right: 50px;
+    padding-right: 52px;
   }
 
   .about button {
@@ -2516,6 +2624,16 @@ textarea {
   .pop-up {
     display: none;
   }
+
+  .success__title {
+    font-size: 60px;
+    line-height: 80px;
+  }
+
+  .success__description {
+    font-size: 20px;
+    line-height: 40px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2571,10 +2689,13 @@ textarea {
   }
 
   .main__questions {
-    padding-bottom: 88px;
+    padding: 47px 0 88px;
   }
 
   .intro {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     margin-top: -66px;
     margin-bottom: 66px;
     padding: 151px 26px 151px;
@@ -2620,7 +2741,6 @@ textarea {
   .intro__image {
     -o-object-position: -229px;
     object-position: -229px;
-    height: 560px;
   }
 
   .advantages__list {
@@ -2747,6 +2867,7 @@ textarea {
 
   .questions__container {
     padding: 0;
+    gap: 0;
   }
 
   .questions__title {
@@ -2789,6 +2910,9 @@ textarea {
   }
 
   .question-form button {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
     margin: 0;
     margin-top: 25px;
   }
@@ -2817,18 +2941,18 @@ textarea {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    -ms-grid-column-align: start;
-    justify-self: start;
+    -ms-grid-column-align: center;
+    justify-self: center;
     padding: 0;
-    padding-left: 50px;
+    margin-left: -4px;
   }
 
   .footer__social-list {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin-top: 20px;
-    margin-left: 20px;
+    margin-top: 21px;
+    margin-left: 37px;
     gap: 25px;
   }
 
@@ -2848,7 +2972,8 @@ textarea {
 
   .nav__title {
     position: relative;
-    padding: 23px 0 20px 24px;
+    padding: 23px 0 22px 24px;
+    cursor: pointer;
   }
 
   .nav__title::before {
@@ -2867,14 +2992,20 @@ textarea {
     transition: 0.2s;
     max-height: 0;
     overflow: hidden;
+    margin-top: -2px;
     padding-left: 24px;
-    gap: 10px;
+    gap: 6px;
   }
 
   .nav__link {
     font-size: 14px;
     line-height: 18px;
     padding-bottom: 10px;
+  }
+
+  .success__title {
+    font-size: 40px;
+    line-height: 60px;
   }
 }
 
