--- a/css/style.css
+++ b/css/style.css
@@ -2304,13 +2304,13 @@ textarea {
 .success {
   position: fixed;
   display: none;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100%;
-  background-color: rgba(4, 24, 39, 0.7);
+  top: 10%;
+  right: 0;
+  width: 100%;
+  background-color: #00b2ff;
   text-align: center;
   z-index: 100;
+  border-radius: 10px;
 }
 
 .success__wrapper {
