--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,7 @@ html {
   line-height: 24px;
   font-family: "Placeholder", "Arial", sans-serif;
   color: #000000;
+  background-color: #f8fdff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
@@ -437,7 +438,6 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
 }
 
 a {
@@ -582,7 +582,7 @@ textarea {
   min-height: 100vh;
   /* stylelint-disable-next-line */
   min-height: calc(100 * var(--vh, 1vh));
-  background-color: #f2f5f6;
+  background-color: #f8fdff;
 }
 
 .wrapper .header,
@@ -1380,6 +1380,7 @@ textarea {
   justify-content: space-between;
   max-width: 1222px;
   margin: 0 auto;
+  padding-bottom: 2px;
 }
 
 .header__logo {
@@ -1396,12 +1397,20 @@ textarea {
   flex-wrap: wrap;
   gap: 8px 0;
   width: 39%;
+  height: 100%;
   margin-top: 10px;
   margin-left: 12px;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding-right: 16px;
+}
+
+.header__contact {
+  display: -ms-grid;
+  display: grid;
+  gap: 6px;
+  max-width: 100%;
 }
 
 .header__contact-link {
@@ -2209,6 +2218,7 @@ textarea {
   -ms-flex-direction: column;
   flex-direction: column;
   gap: 5px;
+  max-width: 202px;
 }
 
 .nav__link {
@@ -2221,6 +2231,7 @@ textarea {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  word-break: break-word;
 }
 
 .nav__link:hover {
@@ -2425,10 +2436,18 @@ textarea {
 
   .header__contacts {
     width: auto;
-    gap: 40px;
-    -ms-flex-item-align: start;
+    gap: 10px 40px;
     align-self: flex-start;
     margin-left: auto;
+    grid-column: 2/-1;
+  }
+
+  .header__contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
   }
 
   .header__contact-link .description {
